discussion/kv_engine/174242/174242_rev4_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-51168: MockGlobalTask takes duration

Change-Id: I46263309d0e4367489493fa97c8562f0bde7f5bc

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2022-04-29 17:54:34.000000000
Message: 
Uploaded patch set 4.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-04-29 17:57:26.000000000
Message: 
Patch Set 4: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17211/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/portability/GMock.h:32:10: error: "gmock/gmock.h" file not found [clang-diagnostic-error]
#include <gmock/gmock.h>
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/executor/snooze_time.h:47:9: error: use of undeclared identifier "Expects" [clang-diagnostic-error]
        Expects(desiredSnoozeTime.count() > 0);
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/executor/snooze_time.h:99:6: error: no type named "ostream" in namespace "std" [clang-diagnostic-error]
std::ostream& operator<<(std::ostream& os, const SnoozeTime& snoozeTime);
     ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/executor/snooze_time.h:99:31: error: no type named "ostream" in namespace "std" [clang-diagnostic-error]
std::ostream& operator<<(std::ostream& os, const SnoozeTime& snoozeTime);
                              ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/basic_string.h:406:45: error: no member named "__max" in "__gnu_cxx::__numeric_traits<int>" [clang-diagnostic-error]
          return __gnu_cxx::__numeric_traits<int>::__max;
                                                   ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/basic_string.h:407:51: error: no member named "__min" in "__gnu_cxx::__numeric_traits<int>" [clang-diagnostic-error]
        else if (__d < __gnu_cxx::__numeric_traits<int>::__min)
                                                         ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/basic_string.h:408:45: error: no member named "__min" in "__gnu_cxx::__numeric_traits<int>" [clang-diagnostic-error]
          return __gnu_cxx::__numeric_traits<int>::__min;
                                                   ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/ext/string_conversions.h:75:50: error: no member named "__min" in "__gnu_cxx::__numeric_traits<int>" [clang-diagnostic-error]
            return __val < _TRet(__numeric_traits<int>::__min)
                                                        ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/ext/string_conversions.h:76:48: error: no member named "__max" in "__gnu_cxx::__numeric_traits<int>" [clang-diagnostic-error]
              || __val > _TRet(__numeric_traits<int>::__max);
                                                      ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17211/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/portability/GMock.h:32:10:
error: "gmock/gmock.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17211/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/16174/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
